force-app/main/default/objects/Donor_c__c/Donor_c__c.object-meta.xml
<CustomObject>
    <label>Donor</label>
    <nameField>
        <label>Donor__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>