force-app/main/default/objects/Donor_c__c/fields/Donor_Email__c.field-meta.xml
<CustomField>
    <fullName>Donor_Email__c</fullName>
    <label>Donor_Email</label>
    <type>Email</type>
</CustomField>