force-app/main/default/objects/Donor_c__c/fields/Donor_PhoneNo__c.field-meta.xml
<CustomField>
    <fullName>Donor_PhoneNo__c</fullName>
    <label>Donor_PhoneNo</label>
    <type>Phone</type>
</CustomField>