force-app/main/default/objects/Donor_c__c/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
    <label>Donor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>NGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>